--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,10 @@ dependencies:
   firebase_storage: ^10.2.5
   cloud_firestore: ^3.1.6
   carousel_slider: ^4.0.0
-  get: ^4.3.8
-  intl: ^0.17.0
+  dots_indicator: ^2.1.0
+  fluttertoast: ^8.0.7
+  
+
 
 flutter_icons:
   android: true
